Item5784:Item5782:    * more auto-height fixes    * topicinfo makro in pattern, natedit and natskin are used differently, removed    * some css improvements; still pattern's fonts are way too large.
git-svn-id: http://develop.twiki.org/svn/twiki/trunk@17036 a00a5322-12db-0310-a70b-8735589c885e

--- a/NatEditContrib/pub/TWiki/NatEditContrib/styles.css
+++ b/NatEditContrib/pub/TWiki/NatEditContrib/styles.css
@@ -11,6 +11,7 @@
 .natEditTextArea {
   _width:99% !important; /* bloddy IE */
   font-family:"Bitstream Vera Sans Mono", "Andale Mono", Courier, monospace;
+  font-size:12px;
 }
 ul.natEditTextTools,
 ul.natEditHeadlineTools,
